// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WidgetHeader > renders correctly 1`] = `
<div
  class="d-flex flex-column scaling-padding"
  data-v-8d0de196=""
>
  <div
    class="d-flex flex-nowrap align-center justify-space-between"
    data-v-8d0de196=""
  >
    <div
      class="flex-nowrap text-truncate align-baseline"
      data-v-8d0de196=""
    >
      <span
        class="scaling-title text-truncate pb-1"
        data-v-8d0de196=""
      >
        string
      </span>
      <span
        class="scaling-subtitle px-2 text-quaternary-dark-2 text-no-wrap"
        data-v-8d0de196=""
      >
        string
      </span>
    </div>
    <!--v-if-->
  </div>
  <evocon-v-tooltip-wrap-stub
    data-v-8d0de196=""
    disabled="true"
    location="top"
    opendelay="500"
    text="string"
  />
</div>
`;

exports[`WidgetHeader > renders correctly in mobile view 1`] = `
<div
  class="d-flex flex-column scaling-padding"
  data-v-8d0de196=""
>
  <div
    class="d-flex flex-nowrap align-center justify-space-between"
    data-v-8d0de196=""
  >
    <div
      class="flex-nowrap text-truncate align-baseline"
      data-v-8d0de196=""
    >
      <span
        class="text-headline-small font-weight-regular text-truncate pb-1"
        data-v-8d0de196=""
      >
        string
      </span>
      <span
        class="text-body-small px-2 text-quaternary-dark-2 text-no-wrap"
        data-v-8d0de196=""
      >
        string
      </span>
    </div>
    <!--v-if-->
  </div>
  <evocon-v-tooltip-wrap-stub
    data-v-8d0de196=""
    disabled="true"
    location="top"
    opendelay="500"
    text="string"
  />
</div>
`;
